--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-uglify-js-plugin": "^1.1.9"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "firebase": "^3.7.4",
     "framework7": "^1.5.4",
     "framework7-icons": "^0.8.9",
