--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "mo-js": "^0.288.1",
     "node-sass": "^4.5.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
@@ -32,6 +33,7 @@
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.16.1",
     "svg-url-loader": "^2.0.2",
+    "sweetalert2": "^6.5.5",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "uglifyjs-webpack-plugin": "^0.3.1",
     "url-loader": "^0.5.8",
@@ -39,6 +41,7 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.3.3",
     "vue-template-compiler": "^2.2.6",
+    "vue-touch-ripple": "^2.3.4",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2",
     "webpack-uglify-js-plugin": "^1.1.9"
@@ -56,8 +59,8 @@
     "vuex": "^2.2.1"
   },
   "repository": {
-  "type": "git",
-  "url": "git://github.com/cuduy197/cunghoctot.git"
-   },
+    "type": "git",
+    "url": "git://github.com/cuduy197/cunghoctot.git"
+  },
   "author": "cuduy197"
 }
