--- a/package.json
+++ b/package.json
@@ -12,50 +12,54 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.24.0",
+    "animate.css": "^3.5.2",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.3.3",
+    "babel-preset-stage-0": "^6.24.1",
     "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.27.3",
+    "coffee-loader": "^0.7.3",
+    "css-loader": "^0.28.0",
     "device.js": "git+https://github.com/matthewhudson/device.js.git",
     "epipebomb": "^1.0.0",
     "extract-text-webpack-plugin": "git+https://github.com/webpack/extract-text-webpack-plugin.git",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.1",
+    "framework7-icons": "^0.8.9",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "mo-js": "^0.288.1",
-    "node-sass": "^4.5.1",
+    "node-sass": "^4.5.2",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
     "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.0",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.16.1",
     "svg-url-loader": "^2.0.2",
-    "sweetalert2": "^6.5.5",
+    "sweetalert2": "^6.6.0",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
-    "uglifyjs-webpack-plugin": "^0.3.1",
+    "uglifyjs-webpack-plugin": "^0.4.1",
     "url-loader": "^0.5.8",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^11.3.3",
+    "vue-loader": "^11.3.4",
+    "vue-resource": "^1.3.1",
     "vue-template-compiler": "^2.2.6",
+    "vue-touch": "^2.0.0-beta.4",
     "vue-touch-ripple": "^2.3.4",
-    "webpack": "^2.3.2",
+    "vue-typer": "^1.0.2",
+    "vuetify": "^0.10.4",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-uglify-js-plugin": "^1.1.9"
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
-    "firebase": "^3.7.4",
+    "babel-core": "^6.24.1",
+    "firebase": "^3.7.5",
     "framework7": "^1.5.4",
-    "framework7-icons": "^0.8.9",
     "framework7-vue": "^0.8.5",
     "vue": "^2.2.6",
-    "vue-resource": "^1.2.1",
-    "vue-touch": "^2.0.0-beta.4",
-    "vuefire": "^1.4.0",
     "vuex": "^2.2.1"
   },
   "repository": {
