--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "cunghoctot",
     "version": "1.0.1",
     "description": "Ứng dụng ôn thi THPT quốc gia hiệu quả, thú vị và miễn phí",
-
     "scripts": {
         "savepass": "git config --global credential.helper 'cache --timeout=36000'",
         "git": "git status",
@@ -13,9 +12,8 @@
         "start": "cordova run browser -- --lr",
         "bae": "i love u! bae ^^",
         "dev": "cordova run browser -- --lr",
-        "apk": "cordova build android"
+        "build": "cordova build android && thunar /home/kd/dev/cunghoctot/platforms/android/build/outputs/apk"
     },
-
     "keywords": [
         "ecosystem:cordova"
     ],
@@ -25,11 +23,11 @@
         "babel-core": "^6.24.1",
         "babel-loader": "^7.0.0",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.4.0",
+        "babel-preset-env": "^1.5.0",
         "babel-preset-stage-0": "^6.24.1",
         "cheerio": "^0.22.0",
         "clean-webpack-plugin": "^0.1.16",
-        "css-loader": "^0.28.0",
+        "css-loader": "^0.28.2",
         "device.js": "git+https://github.com/matthewhudson/device.js.git",
         "epipebomb": "^1.0.0",
         "extract-text-webpack-plugin": "git+https://github.com/webpack/extract-text-webpack-plugin.git",
@@ -38,38 +36,59 @@
         "html-loader": "^0.4.5",
         "html-webpack-plugin": "^2.28.0",
         "mo-js": "^0.288.1",
-        "node-sass": "^4.5.2",
+        "node-sass": "^4.5.3",
+        "parse": "^1.9.2",
         "path": "^0.12.7",
-        "pug": "^2.0.0-beta11",
-        "sass-loader": "^6.0.3",
+        "pug": "^2.0.0-rc.1",
+        "sass-loader": "^6.0.5",
         "source-map-loader": "^0.2.1",
-        "style-loader": "^0.16.1",
+        "style-loader": "^0.18.0",
         "svg-url-loader": "^2.0.2",
-        "sweetalert2": "^6.6.1",
+        "sweetalert2": "^6.6.4",
         "uglify-js": "github:mishoo/UglifyJS2#harmony",
         "uglifyjs-webpack-plugin": "^0.4.3",
         "url-loader": "^0.5.8",
         "vue-hot-reload-api": "^2.1.0",
         "vue-html-loader": "^1.2.4",
-        "vue-loader": "^11.3.4",
+        "vue-loader": "^12.1.0",
         "vue-resource": "^1.3.1",
-        "vue-template-compiler": "^2.2.6",
+        "vue-template-compiler": "^2.3.3",
         "vue-typer": "^1.0.3",
-        "webpack": "^2.4.1",
-        "webpack-dev-server": "^2.4.4",
+        "webpack": "^2.5.1",
+        "webpack-dev-server": "^2.4.5",
         "webpack-uglify-js-plugin": "^1.1.9"
     },
     "dependencies": {
         "babel-core": "^6.24.1",
-        "firebase": "^3.9.0",
+        "cordova-android": "^6.2.3",
+        "cordova-browser": "~4.1.0",
+        "cordova-plugin-buildinfo": "~1.1.0",
+        "cordova-plugin-media": "~3.0.1",
+        "cordova-plugin-network-information": "~1.3.3",
+        "cordova-plugin-statusbar": "~2.2.3",
+        "cordova-plugin-whitelist": "1",
+        "firebase": "^4.0.0",
         "framework7": "^1.6.0",
         "framework7-vue": "^0.9.0",
-        "vue": "^2.2.6",
+        "vue": "^2.3.3",
         "vuex": "^2.3.1"
     },
     "repository": {
         "type": "git",
         "url": "git://github.com/cuduy197/cunghoctot.git"
     },
-    "author": "cuduy197"
+    "author": "cuduy197",
+    "cordova": {
+        "platforms": [
+            "android",
+            "browser"
+        ],
+        "plugins": {
+            "cordova-plugin-buildinfo": {},
+            "cordova-plugin-media": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {}
+        }
+    }
 }
